# zed-lang

./: .editorconfig  CONTRIBUTING.md  LICENSE  Makefile  README.md
build-sys/: Cargo.toml
build-sys/src/: main.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen.rs  colors.rs  lexer.rs  main.rs  parser.rs
docs/: docs.md
examples/documentation/: zed.json
examples/documentation/docs/: index.html  main.html
examples/documentation/docs/assets/: style.css
examples/documentation/src/: main.zed
examples/error/: zed.json
examples/error/src/: main.zed
examples/fibonacci/: .gitignore  zed.json
examples/fibonacci/src/: main.zed
examples/hello-world/: .gitignore  zed.json
examples/hello-world/src/: main.zed
examples/hello-world/src/std/: fs.zed  io.zed
examples/includes/: zed.json
examples/includes/src/: lib.zed  main.zed
examples/package/: zed.json
examples/package/src/: main.zed
examples/predeclaration/: zed.json
examples/predeclaration/src/: main.zed
examples/predeclaration/src/std/: fs.zed  io.zed  math.zed
extension/: language-configuration.json  package.json
extension/syntaxes/: zed.tmLanguage.json
extension/themes/: zed-color-scheme.json
std/: io.zed  memory.zed  string.zed  sys.zed
tools/zed-docgen/: Cargo.toml
tools/zed-docgen/src/: generator.rs  main.rs  parser.rs  templates.rs
tools/zed-fmt/: Cargo.toml
tools/zed-fmt/src/: formatter.rs  main.rs
tools/zed-pkg/: Cargo.toml
tools/zed-pkg/src/: main.rs
