[package]
name = "zed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
walkdir = "2.3"
