[package]
name = "zed-pkg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.3"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17.11"
home = "0.5.11"
